@@ -14,6 +14,9 @@ matrix:
           env: TOXENV=py37
         - python: "3.8"
           env: TOXENV=py38
+        - python: "3.9"
+          env: TOXENV=py39
+
 
 install:
     - pip install -U pip setuptools
