@@ -1,7 +1,6 @@
 [buildout]
 extends =
-    https://zopefoundation.github.io/Zope/releases/4.x/versions-prod.cfg
-    https://zopefoundation.github.io/Zope/releases/4.x/versions.cfg
+    https://zopefoundation.github.io/Zope/releases/master/versions.cfg
 develop = .
 parts = 
     test
