@@ -1,0 +1,4 @@
+[buildout]
+extends =
+    buildout.cfg
+    http://zopefoundation.github.io/Zope/releases/4.x/versions.cfg
