@@ -12,9 +12,11 @@ setup(name='Products.mcdutils',
                    'Zope session implementations.'),
       long_description=long_description,
       classifiers=[
-        'Development Status :: 5 - Production/Stable',
+        'Development Status :: 6 - Mature',
+        'Environment :: Web Environment',
         'Framework :: Zope',
         'Framework :: Zope :: 4',
+        'Framework :: Zope :: 5',
         'Intended Audience :: Developers',
         'License :: OSI Approved :: Zope Public License',
         'Operating System :: OS Independent',
@@ -26,12 +28,13 @@ setup(name='Products.mcdutils',
         'Programming Language :: Python :: 3.6',
         'Programming Language :: Python :: 3.7',
         'Programming Language :: Python :: 3.8',
+        'Programming Language :: Python :: 3.9',
         'Topic :: Internet :: WWW/HTTP :: Session'],
       keywords='session memcache memcached Products',
       author='Tres Seaver and contributors',
       author_email='tseaver@palladion.com',
       maintainer='Jens Vagelpohl',
-      maintainer_email='jens@netz.ooo',
+      maintainer_email='jens@plyp.com',
       url='https://mcdutils.readthedocs.io',
       project_urls={
         'Documentation': 'https://mcdutils.readthedocs.io',
