@@ -1,18 +1,22 @@
 [tox]
 envlist =
     py27,
+    py27_zope213,
     py35,
     py36,
     py37,
     py38,
+    py39,
     lint,
     coverage
 
 [testenv]
 commands =
-    {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    py27,py35: {envbindir}/buildout -nc {toxinidir}/buildout4.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
+    !py27-!py35: {envbindir}/buildout -c {toxinidir}/buildout.cfg buildout:directory={envdir} buildout:develop={toxinidir} install test
     coverage run {envbindir}/test
 deps =
+    setuptools < 52
     zc.buildout 
     coverage
 skip_install = true
@@ -35,6 +39,7 @@ depends =
     py36,
     py37,
     py38,
+    py39,
 setenv =
     COVERAGE_FILE={toxinidir}/.coverage
 
