@@ -3,6 +3,9 @@ Change log
 
 3.2 (unreleased)
 ----------------
+- claim compatibility with Python 3.9 and Zope 5
+
+- fixed type error on adding session items via ZMI test page
 
 
 3.1 (2021-01-01)
